WIP fix spacing definition

--- a/guatemala-showcase.scss
+++ b/guatemala-showcase.scss
@@ -1,4 +1,7 @@
+@import "guatemala";
+
 .demo-button-container {
+    margin-top: $spacing-xxs;
     .gu-button {
         width: 240px;
         margin-top: 24px; 
