--- a/scss/spacing/_spacing.scss
+++ b/scss/spacing/_spacing.scss
@@ -1,9 +1,18 @@
-$spacing-8: 8px;
-$spacing-16: 16px;
-$spacing-24: 24px;
-$spacing-32: 32px;
-$spacing-40: 40px;
-$spacing-48: 48px;
-$spacing-56: 56px;
-$spacing-64: 64px;
-$spacing-72: 72px;
+:root {
+  --space-unit: 1em;
+  --space-xxs:  calc(0.25 * var(--space-unit));
+  --space-xs:   calc(0.5 * var(--space-unit));
+  --space-sm:   calc(0.75 * var(--space-unit));
+  --space-md:   calc(1.25 * var(--space-unit));
+  --space-lg:   calc(2 * var(--space-unit));
+  --space-xl:   calc(3.25 * var(--space-unit));
+  --space-xxl:  calc(5.25 * var(--space-unit));
+}
+
+$spacing-xxs: var(--space-unit);
+$spacing-xs: var(--space-xxs);
+$spacing-sm: var(--space-sm);
+$spacing-md: var(--space-md);
+$spacing-lg: var(--space-lg);
+$spacing-xl: var(--space-xl);
+$spacing-xxl: var(--space-xxl);
